--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,11 +13,9 @@ steps:
 - bash: |
     docker pull dynatrace/dynatrace-configuration-as-code:latest
     docker run dynatrace/dynatrace-configuration-as-code:latest
-  displayName: 'Deploy Monaco'
-- bash: |
     monaco  deploy --dry-run manifest.yaml
   env:
     TOKEN: $(DT_TOKEN_ENV)
     OAUTH_CLIENT_ID: $(DT_OAUTH_CLIENT_ID)
     OAUTH_CLIENT_SECRET: $(DT_OAUTH_CLIENT_SECRET)
-  displayName: 'Run manifest.yaml'
+  displayName: 'Run Monaco'
