--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,8 @@ pool:
 steps:
 - bash: |
     docker pull dynatrace/dynatrace-configuration-as-code:latest
-    docker run dynatrace/dynatrace-configuration-as-code:latest
-    monaco deploy --dry-run manifest.yaml
+    docker run --name monaco dynatrace/dynatrace-configuration-as-code:latest
+    docker exec monaco monaco deploy --dry-run manifest.yaml
   env:
     TOKEN: $(DT_TOKEN_ENV)
     OAUTH_CLIENT_ID: $(DT_OAUTH_CLIENT_ID)
