--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,11 +12,7 @@ pool:
 steps:
 - bash: |
     docker pull dynatrace/dynatrace-configuration-as-code:latest
-    docker run --name monaco dynatrace/dynatrace-configuration-as-code:latest
-  displayName: 'Run Monaco'
-- bash: |
-    docker ps
-    docker exec monaco monaco deploy manifest.yaml
+    docker run --name monaco dynatrace/dynatrace-configuration-as-code:latest deploy -d manifest.yaml
   env:
     TOKEN: $(DT_TOKEN_ENV)
     OAUTH_CLIENT_ID: $(DT_OAUTH_CLIENT_ID)
