--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 - bash: |
     docker pull dynatrace/dynatrace-configuration-as-code:latest
     docker run --name monaco \
-    dynatrace/dynatrace-configuration-as-code:latest deploy -d ./monaco-demo/manifest.yaml
+    dynatrace/dynatrace-configuration-as-code:latest deploy -d /monaco-demo/manifest.yaml
   env:
     TOKEN: $(DT_TOKEN_ENV)
     OAUTH_CLIENT_ID: $(DT_OAUTH_CLIENT_ID)
