--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
     docker pull dynatrace/dynatrace-configuration-as-code:latest
     ll
     docker run --name monaco \
-    dynatrace/dynatrace-configuration-as-code:latest deploy -d /monaco-demo/manifest.yaml
+    dynatrace/dynatrace-configuration-as-code:latest deploy -d monaco-demo/manifest.yaml
   env:
     TOKEN: $(DT_TOKEN_ENV)
     OAUTH_CLIENT_ID: $(DT_OAUTH_CLIENT_ID)
