--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,40 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - main
 
-pool:
-  vmImage: ubuntu-latest
+jobs:
+- job: RunContainerTests
+  pool:
+    vmImage: 'ubuntu-latest'
 
-steps:
-- bash: |
-    docker pull dynatrace/dynatrace-configuration-as-code:latest
-    ll
-    docker run --name monaco \
-    dynatrace/dynatrace-configuration-as-code:latest deploy -d monaco-demo/manifest.yaml
-  env:
-    TOKEN: $(DT_TOKEN_ENV)
-    OAUTH_CLIENT_ID: $(DT_OAUTH_CLIENT_ID)
-    OAUTH_CLIENT_SECRET: $(DT_OAUTH_CLIENT_SECRET)
-  displayName: 'Deploy mani'
+  steps:
+  - task: UseDotNet@2
+    inputs:
+      packageType: 'sdk'
+      version: '3.x'
+
+  - task: DockerInstaller@0
+    inputs:
+      dockerVersion: '17.09.0-ce'
+      releaseType: 'stable'
+
+  - script: docker pull dynatrace/dynatrace-configuration-as-code:latest
+    displayName: 'Pull Docker Image'
+
+  - script: |
+      docker run -d --name my_container dynatrace/dynatrace-configuration-as-code:latest
+      sleep 10
+    env:
+      TOKEN: $(DT_TOKEN_ENV)
+      OAUTH_CLIENT_ID: $(DT_OAUTH_CLIENT_ID)
+      OAUTH_CLIENT_SECRET: $(DT_OAUTH_CLIENT_SECRET)
+    displayName: 'Run Docker Container'
+
+  - script: |
+      docker exec my_container moanco deploy manifest.yaml
+    displayName: 'Execute moanco deploy inside Container'
+
+  - script: docker stop my_container
+    displayName: 'Stop Docker Container'
+
+  - script: docker rm my_container
+    displayName: 'Remove Docker Container'
