check monaco version

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,22 +8,10 @@ jobs:
 
   steps:
 
-  - task: DockerInstaller@0
-    inputs:
-      dockerVersion: '17.09.0-ce'
-      releaseType: 'stable'
-
   - script: docker pull dynatrace/dynatrace-configuration-as-code:latest
     displayName: 'Pull Docker Image'
     
-  - task: CopyFiles@2
-    inputs:
-      SourceFolder: '$(Build.SourcesDirectory)'  # Assuming manifest.yaml is in the root of your repository
-      Contents: 'manifest.yaml'
-      TargetFolder: '$(Build.ArtifactStagingDirectory)'
-    displayName: 'Copy manifest.yaml to staging directory'
-
   - script: |
-      docker run -v $(Build.SourcesDirectory)/.logs:/monaco/.logs -e TOKEN=$(DT_TOKEN) dynatrace/dynatrace-configuration-as-code deploy /monaco/manifest.yaml
+      docker run dynatrace/dynatrace-configuration-as-code deploy version
       sleep 10
     displayName: 'Run Docker Container'
