--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,16 +8,16 @@ jobs:
 
   steps:
     - task: CopyFiles@2
-    displayName: 'Copy manifest.yaml to Docker container'
     inputs:
-      SourceFolder: '$(Build.SourcesDirectory)'  # Path to the root of your repository
-      Contents: 'manifest.yaml'  # Name of the file you want to copy
-      TargetFolder: '/monaco'  # Target folder in the Docker container
+      SourceFolder: '$(Build.SourcesDirectory)' 
+      Contents: 'manifest.yaml'  
+      TargetFolder: '/doc'  
       OverWrite: true
+    displayName: 'Copy manifest.yaml to Docker container'
 
   - script: docker pull dynatrace/dynatrace-configuration-as-code:latest
     displayName: 'Pull Docker Image'
     
   - script: |
-      docker run --mount type=bind,src="/",target=/monaco dynatrace/dynatrace-configuration-as-code deploy -d /manifest.yaml
+      docker run --mount type=bind,src="/",target=/monaco dynatrace/dynatrace-configuration-as-code deploy -d /doc/manifest.yaml
     displayName: 'Run Docker Container'
