--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,12 +14,12 @@ jobs:
     inputs:
       SourceFolder: '$(Build.SourcesDirectory)'  # Path to the root of your repository
       Contents: 'manifest.yaml'  # Name of the file you want to copy
-      TargetFolder: '/monaco'  # Target folder in the Docker container
+      TargetFolder: '/doc'  # Target folder in the Docker container
       OverWrite: true
 
   - script: docker pull dynatrace/dynatrace-configuration-as-code:latest
     displayName: 'Pull Docker Image'
     
   - script: |
-      docker run --mount type=bind,src="/",target=/monaco dynatrace/dynatrace-configuration-as-code deploy -d /monaco/manifest.yaml
+      docker run --mount type=bind,src="/",target=/monaco dynatrace/dynatrace-configuration-as-code deploy -d /doc/manifest.yaml
     displayName: 'Run Docker Container'
