--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,9 @@ jobs:
   - script: docker pull dynatrace/dynatrace-configuration-as-code:latest
     displayName: 'Pull Docker Image'
     
-  - script: |
-      docker run --mount type=bind,src="$(Agent.BuildDirectory)/doc/",target=/monaco dynatrace/dynatrace-configuration-as-code deploy -d manifest.yaml
+  - script:  docker run --mount type=bind,src="$(Agent.BuildDirectory)/doc/",target=/monaco dynatrace/dynatrace-configuration-as-code deploy -d manifest.yaml
+    env:
+      TOKEN: $(DT_TOKEN)
+      OAUTH_CLIENT_ID: $(DT_OAUTH_CLIENT_ID)
+      OAUTH_CLIENT_SECRET: $(DT_OAUTH_CLIENT_SECRET)
     displayName: 'Run Docker Container'
