--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ jobs:
   - script: docker pull dynatrace/dynatrace-configuration-as-code:latest
     displayName: 'Pull Monaco Image'
     
-  - script:  docker run --mount type=bind,src="$(Agent.BuildDirectory)/doc/",target=/monaco dynatrace/dynatrace-configuration-as-code deploy -d manifest.yaml
+  - script:  docker run --env TOKEN=$(DT_TOKEN) --mount type=bind,src="$(Agent.BuildDirectory)/doc/",target=/monaco dynatrace/dynatrace-configuration-as-code deploy -d manifest.yaml
     env:
       TOKEN: $(DT_TOKEN)
       OAUTH_CLIENT_ID: $(DT_OAUTH_CLIENT_ID)
